--- a/appoint.cabal
+++ b/appoint.cabal
@@ -1,8 +1,13 @@
+-- This file has been generated from package.yaml by hpack version 0.14.1.
+--
+-- see: https://github.com/sol/hpack
+
 name:                appoint
 version:             0.1.0.0
 synopsis:            TODO Initial project template from stack
 description:         Please see README.md
-homepage:            https://github.com/rob-b/appoint
+homepage:            https://github.com/rob-b/appoint#readme
+bug-reports:         https://github.com/rob-b/appoint/issues
 license:             BSD3
 license-file:        LICENSE
 author:              Rob Berry
@@ -10,42 +15,54 @@ maintainer:          example@example.com
 copyright:           Copyright: (c) 2016 Rob Berry
 category:            Acme
 build-type:          Simple
-extra-source-files:  README.md
-cabal-version:       >=1.10
-tested-with:         GHC == 7.10.2
+cabal-version:       >= 1.10
+tested-with:         GHC==7.10.2
 
-library
-  default-language:    Haskell2010
-  ghc-options:         -Wall
-  hs-source-dirs:      src
-  exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
-                     , text
-                     , bytestring
-                     , github
-                     , vector
-                     , transformers
-
-executable appoint
-  default-language:    Haskell2010
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  build-depends:       base
-                     , appoint
-
-
-test-suite spec
-  default-language:    Haskell2010
-  ghc-options:         -Wall
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , appoint
-                     , hspec
-                     , QuickCheck
+extra-source-files:
+    README.md
 
 source-repository head
-  type:     git
+  type: git
   location: https://github.com/rob-b/appoint
+
+library
+  default-language: Haskell2010
+  ghc-options: -Wall
+  hs-source-dirs:
+      src
+  exposed-modules:
+      Lib
+  other-modules:
+      Paths_appoint
+  build-depends:
+      base >=4.7 && <5
+    , text
+    , bytestring
+    , github
+    , vector
+    , transformers
+
+executable appoint
+  default-language: Haskell2010
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  hs-source-dirs:
+      app
+  main-is: Main.hs
+  build-depends:
+      base
+    , appoint
+
+test-suite spec
+  default-language: Haskell2010
+  ghc-options: -Wall
+  type: exitcode-stdio-1.0
+  hs-source-dirs:
+      test
+  main-is: Spec.hs
+  build-depends:
+      base
+    , appoint
+    , hspec
+    , QuickCheck
+  other-modules:
+      LibSpec
