--- a/stack.yaml
+++ b/stack.yaml
@@ -42,6 +42,8 @@ packages:
 # (e.g., acme-missiles-0.3)
 extra-deps:
   - github-0.15.0
+  - http-client-0.5.4
+  - http-client-tls-0.3.3
 
 # Override default flag values for local packages and extra-deps
 flags: {}
