--- a/appoint.cabal
+++ b/appoint.cabal
@@ -31,7 +31,8 @@ library
   hs-source-dirs:
       src
   exposed-modules:
-      Lib
+      Appoint.Lib
+      Appoint.Wrap
   other-modules:
       Paths_appoint
   build-depends:
@@ -41,6 +42,7 @@ library
     , github
     , vector
     , transformers
+    , rainbow
 
 executable appoint
   default-language: Haskell2010
@@ -64,5 +66,6 @@ test-suite spec
     , appoint
     , hspec
     , QuickCheck
+    , text
   other-modules:
-      LibSpec
+      WrapSpec
