--- a/appoint.cabal
+++ b/appoint.cabal
@@ -64,6 +64,7 @@ library
     , persistent-sqlite
     , persistent-template
     , optparse-applicative
+    , logging-effect
 
 executable appoint
   default-language: Haskell2010
