--- a/appoint.cabal
+++ b/appoint.cabal
@@ -65,6 +65,8 @@ library
     , persistent-template
     , optparse-applicative
     , logging-effect
+    , monad-logger
+    , monad-control
 
 executable appoint
   default-language: Haskell2010
