--- a/package.yaml
+++ b/package.yaml
@@ -38,6 +38,8 @@ library:
   - persistent-template
   - optparse-applicative
   - logging-effect
+  - monad-logger
+  - monad-control
 executables:
   appoint:
     main: Main.hs
