--- a/stack.yaml
+++ b/stack.yaml
@@ -6,7 +6,7 @@
 
 # Resolver to choose a 'specific' stackage snapshot or a compiler version.
 # A snapshot resolver dictates the compiler version and the set of packages
-# to be used for project dependencies. For example:
+# to be used for project dependencies. For example:)
 # 
 # resolver: lts-3.5
 # resolver: nightly-2015-09-21
@@ -37,6 +37,18 @@ resolver: lts-8.2
 # will not be run. This is useful for tweaking upstream packages.
 packages:
   - '.'
+  # - extra-dep: true
+  #   location:
+  #     git: https://github.com/haskell/deepseq
+  #     commit: 0b22c9825ef79c1ee41d2f19e7c997f5cdc93494
+  # - extra-dep: true
+  #   location:
+  #     git: https://github.com/ekmett/semigroupoids
+  #     commit: c3297f970658ae874db098190327ec742044a2e6
+  # - extra-dep: true
+  #   location:
+  #     git: https://github.com/ekmett/lens
+  #     commit: 7031e00f62a704a86c3149c75c1e2afc059af022
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
@@ -65,3 +77,24 @@ extra-package-dbs: []
 # 
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+# allow-newer: true
+# compiler: ghc-8.2.0.20170507
+# compiler-check: match-exact
+# resolver: lts-8.13
+# setup-info:
+#   ghc:
+#     linux64:
+#       8.2.0.20170507:
+#         url: https://downloads.haskell.org/~ghc/8.2.1-rc2/ghc-8.2.0.20170507-x86_64-deb8-linux.tar.xz
+#         content-length: 141011788
+#         sha1: ff886437c1d2ddfa5686d6c9efb0819a957c3dde
+#     macosx:
+#       8.2.0.20170507:
+#         url: https://downloads.haskell.org/~ghc/8.2.1-rc2/ghc-8.2.0.20170507-x86_64-apple-darwin.tar.xz
+#         content-length: 126192308
+#         sha1: f059fe6f8a898d5619ab03e06e0ff0912a5f3340
+#     windows64:
+#       8.2.0.20170507:
+#         url: https://downloads.haskell.org/~ghc/8.2.1-rc2/ghc-8.2.0.20170507-x86_64-unknown-mingw32.tar.xz
+#         content-length: 177295548
+#         sha1: 87646ca3a89278775ceb7be429faafac3cf738d8
